--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    font-family: "Figtree", sans-serif;
+    font-optical-sizing: auto;
+    /* font-weight: <weight>; */
+    font-style: normal;
+}
+
+.tulisan-logo{
+    color: #F5E8D7;
+    font-family: Doto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.tulisan-logo-2{
+    color: #F5E8D7;
+    font-family: Doto;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.gradient-text {
+    background: linear-gradient(90deg, #2FE559, #038AFF);
+    /* -webkit-background-clip: text; */
+    -webkit-text-fill-color: transparent;
+}
